Added support for v1.21.9 (v1_21_R6)