@@ -5,6 +5,7 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLConnection;
 import java.util.HashMap;
@@ -159,7 +160,7 @@ public final class SpigotUpdateManager {
             }
 
             String updateUrlString = String.format(BASE_UPDATE_URL, resourceId);
-            URL url = new URL(updateUrlString);
+            URL url = URI.create(updateUrlString).toURL();
 
             URLConnection urlConnection = url.openConnection();
             HttpURLConnection httpURLConnection = (HttpURLConnection) urlConnection;
